# CMSSignerAPI

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
resources/: doc_signed.p7s  hash_doc.txt
src/: CMSApplication.cpp  CMSApplication.h  CMSSigner.cpp  CMSSigner.h  CMSVerifier.cpp  CMSVerifier.h  FileHash.cpp  FileHash.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  main.cpp
src/handlers/: SignHandler.cpp  SignHandler.h  VerifyHandler.cpp  VerifyHandler.h
test/: CMSSignerTest.cpp  CMSVerifierTest.cpp  FileHashTest.cpp
